--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 
 <style>
 /* ===== RESET ===== */
-*{margin:0;padding:0;box-sizing:border-box}
-html,body{touch-action:manipulation}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
+
+html, body{
+  touch-action: manipulation;
+}
 
 /* ===== BODY ===== */
 body{
@@ -17,119 +24,283 @@ body{
     radial-gradient(900px 500px at 50% 10%, rgba(0,120,255,.25), transparent 60%),
     radial-gradient(800px 600px at 20% 85%, rgba(0,255,150,.22), transparent 65%),
     #050505;
-  color:#fff;overflow-x:hidden;
+  color:#fff;
+  overflow-x:hidden;
+}
+
+/* ===== PAGE TRANSITION ===== */
+.page-transition{
+  position:fixed;
+  inset:0;
+  background:
+    radial-gradient(600px 300px at 50% 60%, rgba(255,255,255,.18), transparent 60%),
+    #050505;
+  z-index:9999;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity .6s ease, backdrop-filter .6s ease;
+  backdrop-filter:blur(0px);
+}
+
+.page-transition.active{
+  opacity:1;
+  backdrop-filter:blur(22px);
 }
 
 /* ===== TOP BAR ===== */
 .topbar{
-  position:fixed;top:0;left:0;width:100%;height:64px;
-  display:flex;align-items:center;justify-content:space-between;
-  padding:0 22px;background:rgba(5,5,5,.55);
-  backdrop-filter:blur(14px);z-index:1000;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:64px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:0 22px;
+  background:rgba(5,5,5,.55);
+  backdrop-filter:blur(14px);
+  z-index:1000;
 }
-.nav-left a,.nav-right span{
-  color:#fff;text-decoration:none;margin-right:18px;
-  font-weight:700;opacity:.85;
+
+.nav-left a,
+.nav-right span{
+  color:#fff;
+  text-decoration:none;
+  margin-right:18px;
+  font-weight:700;
+  opacity:.85;
 }
-.nav-left a:hover,.nav-right span:hover{opacity:1}
-.nav-right span{cursor:pointer}
-.nav-right .active{opacity:1}
+
+.nav-left a:hover,
+.nav-right span:hover{
+  opacity:1;
+}
+
+.nav-right span{
+  cursor:pointer;
+}
+
+.nav-right .active{
+  opacity:1;
+}
 
 /* ===== HERO ===== */
-.hero{min-height:100vh;padding:140px 7% 100px;position:relative}
-.hero h1{
-  font-size:clamp(42px,7vw,82px);font-weight:900;line-height:1.05;
-  letter-spacing:-1px;text-shadow:0 20px 60px rgba(0,0,0,.6)
+.hero{
+  min-height:100vh;
+  padding:140px 7% 100px;
+  position:relative;
 }
-.hero h1 span{color:#aaa}
-.hero p{margin-top:22px;max-width:520px;font-size:18px;opacity:.9}
+
+.hero h1{
+  font-size:clamp(42px,7vw,82px);
+  font-weight:900;
+  line-height:1.05;
+  letter-spacing:-1px;
+  text-shadow:0 20px 60px rgba(0,0,0,.6);
+}
+
+.hero h1 span{
+  color:#aaa;
+}
+
+.hero p{
+  margin-top:22px;
+  max-width:520px;
+  font-size:18px;
+  opacity:.9;
+}
 
 /* ===== CTA ===== */
 .hero .cta{
-  margin-top:42px;display:flex;gap:32px;flex-wrap:wrap;
+  margin-top:42px;
+  display:flex;
+  gap:22px;
+  flex-wrap:wrap;
+  position:relative;
 }
+
 .hero .cta a{
-  display:inline-flex;flex-direction:column;align-items:center;justify-content:center;
-  padding:18px 36px;border-radius:18px;font-weight:900;text-decoration:none;
-  transition:.35s ease;position:relative;text-align:center;
+  display:inline-block;
+  padding:18px 36px;
+  border-radius:18px;
+  font-weight:900;
+  text-decoration:none;
+  transition:.35s ease;
+  position:relative;
+  text-align:center;
 }
 
-/* ===== PREMIUM GLASS BUTTON ===== */
-.glass-btn{
-  background:rgba(255,255,255,.14);color:#fff;
-  border:1px solid rgba(255,255,255,.28);backdrop-filter:blur(18px);
-  box-shadow:0 14px 34px rgba(0,0,0,.65),0 18px 40px rgba(255,255,255,.18);
+/* ===== VER PLANES ===== */
+.hero .cta a:first-child{
+  background:rgba(255,255,255,.92);
+  color:#000;
+  box-shadow:
+    0 10px 30px rgba(0,0,0,.45);
 }
-.glass-btn::after{
-  content:"";position:absolute;inset:-2px;border-radius:20px;
-  background:radial-gradient(140px 70px at 50% 120%, rgba(255,255,255,.35), transparent 70%);
-  opacity:.65;pointer-events:none;
-}
-.glass-btn:hover{
-  transform:scale(1.05);background:rgba(255,255,255,.22);
-  box-shadow:0 20px 60px rgba(0,0,0,.75),0 0 40px rgba(255,255,255,.35);
-}
-.glass-btn .main{font-size:18px;letter-spacing:.5px}
-.glass-btn .sub{margin-top:4px;font-size:11px;font-weight:700;letter-spacing:1.5px;opacity:.7}
 
-/* ===== OPTIONS PULSE ===== */
-.pulse-soft{animation:pulseSoft 2.8s ease-in-out infinite}
-@keyframes pulseSoft{
-  0%,100%{box-shadow:0 14px 34px rgba(0,0,0,.65),0 0 0 rgba(255,255,255,0)}
-  50%{box-shadow:0 18px 48px rgba(0,0,0,.75),0 0 28px rgba(255,255,255,.25)}
+.hero .cta a:first-child:hover{
+  transform:scale(1.05);
+  box-shadow:
+    0 18px 50px rgba(0,0,0,.65),
+    0 0 28px rgba(255,255,255,.45);
+}
+
+/* ===== SERVICIOS VIP ===== */
+.level-btn{
+  background:rgba(255,255,255,.16);
+  color:#fff;
+  border:1px solid rgba(255,255,255,.35);
+  backdrop-filter:blur(18px);
+  box-shadow:
+    0 12px 36px rgba(0,0,0,.65),
+    0 0 26px rgba(255,255,255,.25);
+  animation:vipPulse 3.5s ease-in-out infinite;
+}
+
+.level-btn small{
+  display:block;
+  font-size:12px;
+  opacity:.75;
+  font-weight:600;
+  margin-top:4px;
+}
+
+.level-btn::after{
+  content:"";
+  position:absolute;
+  inset:-3px;
+  border-radius:20px;
+  background:radial-gradient(160px 80px at 50% 120%, rgba(255,255,255,.55), transparent 70%);
+  opacity:.85;
+  pointer-events:none;
+}
+
+.level-btn:hover{
+  transform:scale(1.07);
+  background:rgba(255,255,255,.24);
+  box-shadow:
+    0 22px 65px rgba(0,0,0,.85),
+    0 0 48px rgba(255,255,255,.55);
+}
+
+/* ===== VIP GLOW ===== */
+@keyframes vipPulse{
+  0%,100%{box-shadow:0 12px 36px rgba(0,0,0,.65),0 0 28px rgba(255,255,255,.28)}
+  50%{box-shadow:0 18px 55px rgba(0,0,0,.85),0 0 44px rgba(255,255,255,.55)}
+}
+
+/* ===== POSICIÓN DERECHA ===== */
+.options-btn{
+  position:absolute;
+  right:0;
+  top:0;
+  transform:translateY(6px);
+}
+
+@media(max-width:768px){
+  .options-btn{
+    position:relative;
+    right:auto;
+    top:auto;
+    transform:none;
+  }
 }
 
 /* ===== LAPTOP ===== */
-.laptop{margin:90px auto 0;max-width:900px;animation:float 7s ease-in-out infinite}
-.laptop img{width:100%;display:block;filter:drop-shadow(0 40px 80px rgba(0,0,0,.7))}
-@keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-14px)}}
+.laptop{
+  margin:90px auto 0;
+  max-width:900px;
+  animation:float 7s ease-in-out infinite;
+}
+
+.laptop img{
+  width:100%;
+  display:block;
+  filter:drop-shadow(0 40px 80px rgba(0,0,0,.7));
+}
+
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-14px)}
+}
 
 /* ===== SISTEMA Z ===== */
-.system-z{padding:120px 7% 80px;text-align:center}
-.system-z h2{
-  font-size:clamp(34px,6vw,64px);font-weight:900;letter-spacing:-.5px;margin-bottom:20px
+.system-z{
+  padding:120px 7% 80px;
+  text-align:center;
 }
-.system-z p{font-size:18px;opacity:.9}
 
-/* ===== PULSE ===== */
-.pulse{animation:pulse 2.5s infinite}
-@keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.04)}100%{transform:scale(1)}}
+.system-z h2{
+  font-size:clamp(34px,6vw,64px);
+  font-weight:900;
+  margin-bottom:20px;
+}
+
+.system-z p{
+  font-size:18px;
+  opacity:.9;
+}
 
 /* ===== 15 OFF ===== */
 .offer{
-  max-width:520px;margin:60px auto 0;padding:36px;border-radius:26px;
-  background:rgba(20,40,30,.6);border:1px solid rgba(255,255,255,.15);
-  text-align:center;backdrop-filter:blur(16px);position:relative
+  max-width:520px;
+  margin:60px auto 0;
+  padding:36px;
+  border-radius:26px;
+  background:rgba(20,40,30,.6);
+  border:1px solid rgba(255,255,255,.15);
+  text-align:center;
+  backdrop-filter:blur(16px);
+  position:relative;
 }
-.offer .gift{
-  position:absolute;top:-18px;right:-18px;font-size:34px;cursor:pointer;
-  animation:gift 2.8s infinite;filter:drop-shadow(0 0 14px rgba(255,255,255,.45))
-}
-@keyframes gift{0%,100%{transform:rotate(0) scale(1)}50%{transform:rotate(-8deg) scale(1.15)}}
-.offer h3{font-size:36px;font-weight:900}
-.offer p{margin-top:10px;opacity:.85}
 
-/* ===== CONFETTI ===== */
-.confetti{
-  position:fixed;left:50%;top:50%;pointer-events:none;
-  width:8px;height:8px;border-radius:50%;opacity:0;z-index:2000
+.offer::after{
+  content:"🎁";
+  position:absolute;
+  top:-18px;
+  right:-18px;
+  font-size:36px;
+  animation:float 3s ease-in-out infinite;
+}
+
+.offer h3{
+  font-size:36px;
+  font-weight:900;
+}
+
+.offer p{
+  margin-top:10px;
+  opacity:.85;
 }
 
 /* ===== FOOTER ===== */
-footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14px}
+footer{
+  margin-top:120px;
+  padding:30px 0;
+  text-align:center;
+  opacity:.6;
+  font-size:14px;
+}
 
 /* ===== REVEAL ===== */
-.reveal{opacity:0;transform:translateY(30px);transition:1s}
-.reveal.show{opacity:1;transform:none}
+.reveal{
+  opacity:0;
+  transform:translateY(30px);
+  transition:1s;
+}
 
-/* ===== MOBILE ===== */
-@media(max-width:768px){.hero{padding-top:120px}}
+.reveal.show{
+  opacity:1;
+  transform:none;
+}
 </style>
 </head>
 
 <body>
 
-<!-- ===== TOP BAR ===== -->
+<div class="page-transition" id="pageTransition"></div>
+
 <div class="topbar">
   <div class="nav-left">
     <a href="demo.html" data-es="Demo" data-en="Demo">Demo</a>
@@ -141,7 +312,6 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
   </div>
 </div>
 
-<!-- ===== HERO ===== -->
 <section class="hero">
   <h1 class="reveal">
     <span data-es="Lleva tu negocio al" data-en="Take your business to the">Lleva tu negocio al</span><br>
@@ -154,15 +324,16 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
      Diseñamos webs modernas, rápidas y pensadas para convertir.
   </p>
 
-  <!-- CTA -->
   <div class="cta reveal">
-    <a href="planes.html" class="glass-btn">
-      <span class="main" data-es="Ver planes" data-en="View plans">Ver planes</span>
-    </a>
+    <a href="planes.html" data-es="Ver planes" data-en="View plans">Ver planes</a>
 
-    <a href="level.html" class="glass-btn pulse-soft">
-      <span class="main" data-es="Opciones" data-en="Options">Opciones</span>
-      <span class="sub">(Next Level)</span>
+    <a href="tunivel.html"
+       class="level-btn options-btn"
+       id="vipBtn"
+       data-es="Servicios"
+       data-en="Services">
+      Servicios
+      <small>(VIP)</small>
     </a>
   </div>
 
@@ -171,9 +342,8 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
   </div>
 </section>
 
-<!-- ===== SISTEMA Z ===== -->
 <section class="system-z">
-  <h2 class="pulse reveal"
+  <h2 class="reveal"
       data-es="ZenSite no es solo una web"
       data-en="ZenSite is not just a website">
       ZenSite no es solo una web
@@ -186,20 +356,24 @@ footer{margin-top:120px;padding:30px 0;text-align:center;opacity:.6;font-size:14
   </p>
 
   <div class="offer reveal">
-    <span class="gift" id="gift">🎁</span>
     <h3>15% OFF</h3>
     <p data-es="Solo por 30 días" data-en="Only for 30 days">Solo por 30 días</p>
   </div>
 </section>
 
-<footer>©️ 2025 ZenSite — Todos los derechos reservados</footer>
+<footer>
+  ©️ 2025 ZenSite — Todos los derechos reservados
+</footer>
 
 <script>
 /* ===== REVEAL ===== */
 const revealEls=document.querySelectorAll('.reveal');
 const obs=new IntersectionObserver(entries=>{
   entries.forEach(e=>{
-    if(e.isIntersecting){e.target.classList.add('show');obs.unobserve(e.target);}
+    if(e.isIntersecting){
+      e.target.classList.add('show');
+      obs.unobserve(e.target);
+    }
   });
 },{threshold:.2});
 revealEls.forEach(el=>obs.observe(el));
@@ -214,23 +388,16 @@ function setLang(l){
 langBtns.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
 setLang('es');
 
-/* ===== CONFETTI EFFECT ===== */
-const gift=document.getElementById('gift');
-gift.addEventListener('click',()=>{
-  for(let i=0;i<22;i++){
-    const c=document.createElement('div');
-    c.className='confetti';
-    c.style.background=`hsl(${Math.random()*360},90%,60%)`;
-    c.style.left='50%';c.style.top='50%';
-    document.body.appendChild(c);
-    const x=(Math.random()-0.5)*300;
-    const y=(Math.random()-1)*300;
-    c.animate([
-      {transform:'translate(0,0)',opacity:1},
-      {transform:`translate(${x}px,${y}px)`,opacity:0}
-    ],{duration:1200,easing:'cubic-bezier(.2,.8,.2,1)'});
-    setTimeout(()=>c.remove(),1200);
-  }
+/* ===== VIP TRANSITION ===== */
+const vipBtn=document.getElementById('vipBtn');
+const transition=document.getElementById('pageTransition');
+
+vipBtn.addEventListener('click',e=>{
+  e.preventDefault();
+  transition.classList.add('active');
+  setTimeout(()=>{
+    window.location.href=vipBtn.href;
+  },650);
 });
 </script>
 
